care/force-app/main/default/objects/Process_Security_Settings__mdt/Process_Security_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Process Security Settings</label>
    <pluralLabel>Process_Security_Settings</pluralLabel>
</CustomObject>