care/force-app/main/default/objects/Process_Security_Settings__mdt/fields/AES_KEY__c.field-meta.xml
<CustomField>
    <fullName>AES_KEY__c</fullName>
    <label>AES KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>