care/force-app/main/default/objects/Process_Security_Settings__mdt/fields/Initialization_Vector__c.field-meta.xml
<CustomField>
    <fullName>Initialization_Vector__c</fullName>
    <label>Initialization Vector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>