care/force-app/main/default/objects/Process_Security_Settings__mdt/fields/Switch__c.field-meta.xml
<CustomField>
    <fullName>Switch__c</fullName>
    <description>On/Off Switch for Encryption</description>
    <label>Switch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
                <default>true</default>
                <label>On</label>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>