care/force-app/main/default/objects/Process_Security_Settings__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>AES_KEY__c</columns>
    <columns>Description__c</columns>
    <columns>Initialization_Vector__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Switch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
    <language>en_US</language>
</ListView>